--- a/src/pages/Index.module.scss
+++ b/src/pages/Index.module.scss
@@ -9,11 +9,12 @@
 
     @include small {
       padding-top: 120px;
-      width: 50%;
+      width: 75%;
       font-size: 72px;
     }
 
     @include medium {
+      width: 50%;
       padding-top: 100px;
       font-size: 86px;
     }
